# sir

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  aibom.json  go.mod  install.sh  uninstall.sh
.github/: dependabot.yml
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  packaging.yml  perf-guardrails.yml  post-merge.yml  release.yml  scorecard.yml  zizmor.yml
assets/: demo.cast  design-system.html
bench/: budgets.json
cmd/sir/: allowlist.go  approve.go  approve_test.go  configure.go  configure_test.go  (+67 more)
docs/: README.md  api.md  architecture.md  cedar-policy-provider.md  competitive-analysis.md  contributing.md  getting-started.md  observability.md  opa-policy-provider.md  policy.md  providers.md  sdk.md  security.md
harness/: README.md
mister-shared/: policy_surface.json
planning/: v0.1.1-friction-security-plan.md
schemas/: README.md  sir.action.v0.schema.json  sir.advisory_request.v0.schema.json  sir.advisory_signal.v0.schema.json  sir.attribution.v0.schema.json  sir.capabilities.v0.schema.json  sir.case.v0.schema.json  sir.effect_request.v0.schema.json  sir.effect_result.v0.schema.json  sir.enforceability.v0.schema.json  sir.ledger.v0.schema.json  sir.policy_request.v0.schema.json  sir.policy_verdict.v0.schema.json  sir.provider.v0.schema.json  sir.signal.v0.schema.json
scripts/: check_os_coverage.py  download.ps1  download.sh  generate_protocol_wire.py  verify-release.sh
sir-core/: Cargo.toml
sir-core/src/: lib.rs
tests/: install_test.go
(+425 files in other folders)
